scripts/nullaway/original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8.txt
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:29: error: [NullAway] initializer method does not guarantee @NonNull fields special_dir (line 22), room_dir (line 27) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public CoreRoom(Grid grid) {
	       ^
    (see http://t.uber.com/nullaway )
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:21: error: [NullAway] assigning @Nullable expression to @NonNull field
	private Schematic room_map = null;
	                  ^
    (see http://t.uber.com/nullaway )
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:123: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:152: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreRoom.java:193: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
				generateSpecialRoomRandom(null);
				                          ^
    (see http://t.uber.com/nullaway )
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:12: error: [NullAway] @NonNull field levelStart not initialized
	private Vector2D levelStart, levelEnd;
	                 ^
    (see http://t.uber.com/nullaway )
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:12: error: [NullAway] @NonNull field levelEnd not initialized
	private Vector2D levelStart, levelEnd;
	                             ^
    (see http://t.uber.com/nullaway )
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:13: error: [NullAway] @NonNull field startDir not initialized
	private Direction startDir, endDir;
	                  ^
    (see http://t.uber.com/nullaway )
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:13: error: [NullAway] @NonNull field endDir not initialized
	private Direction startDir, endDir;
	                            ^
    (see http://t.uber.com/nullaway )
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:35: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:110: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return r;
		^
    (see http://t.uber.com/nullaway )
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreLevelCreator.java:151: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return r;
		^
    (see http://t.uber.com/nullaway )
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreDownSchematic.java:118: error: [NullAway] dereferenced expression tmp is @Nullable
		if (!tmp.isEmpty()) {
		        ^
    (see http://t.uber.com/nullaway )
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/Main2.java:36: error: [NullAway] dereferenced expression l is @Nullable
		l.show();
		 ^
    (see http://t.uber.com/nullaway )
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/core/CoreSchematic.java:119: error: [NullAway] dereferenced expression tmp is @Nullable
	    if(!tmp.isEmpty()) {
	           ^
    (see http://t.uber.com/nullaway )
../original/url9ba68db77a_samkio_Dungeonator_tgz-pJ8-net_woopa_dungeon_core_Main2J8/src/net/woopa/dungeon/datatypes/Level.java:10: error: [NullAway] initializer method does not guarantee @NonNull field grid (line 8) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Level(LevelCreator lc, Vector2D levelSize, Vector2D startLocation,
	       ^
    (see http://t.uber.com/nullaway )
16 errors
